# ShadowViewer.PluginWarden

./: .gitignore  app.py  auth.py  authors.py  config.py  github_utils.py  models.py  pyproject.toml  repositories.py  res_model.py
shadowviewer_pluginwarden/: .gitignore  app.py  auth.py  authors.py  models.py  pyproject.toml  repositories.py  res_model.py  store.py
web/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts  vite.config.ts
web/components/: ConfirmationModal.tsx  DashboardView.tsx  InstallModal.tsx  LogTerminal.tsx  LoginPage.tsx  PluginCard.tsx  ReleasesModal.tsx  ReposView.tsx  StoreView.tsx  UserMenu.tsx
web/services/: geminiService.ts
