[tool.poetry]
name = "shadowviewer.pluginwarden"
version = "0.1.0"
description = ""
authors = ["kitUIN <kulujun@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pygithub = "^2.5.0"
pydantic = {extras = ["dotenv"], version = "^2.10.4"}
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"
fastapi-swagger = "^0.2.16"
sqlalchemy = "^2.0.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
